--- a/04_dialog/package.json
+++ b/04_dialog/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "botbuilder": "~4.9.0",
+    "botbuilder-dialogs": "^4.9.2",
     "restify": "~8.5.1"
   },
   "devDependencies": {
