--- a/06_auth/package.json
+++ b/06_auth/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "botbuilder": "~4.9.0",
     "botbuilder-dialogs": "^4.9.2",
+    "dotenv": "^8.2.0",
     "restify": "~8.5.1"
   },
   "devDependencies": {
